kong-configs/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bank-flow-transfer-route
  namespace: bank-flow
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: bank-flow-transfer-rate-limiting,bank-flow-correlation-id,bank-flow-request-size-limiting,bank-flow-security-headers,bank-flow-cors
spec:
  parentRefs:
    - name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /transfer
      backendRefs:
        - name: bank-flow-transfer-api
          kind: Service
          port: 8083
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bank-flow-accounts-route
  namespace: bank-flow
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: bank-flow-accounts-rate-limiting,bank-flow-correlation-id,bank-flow-request-size-limiting,bank-flow-security-headers,bank-flow-cors
spec:
  parentRefs:
    - name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /accounts
      backendRefs:
        - name: bank-flow-accounts
          kind: Service
          port: 8084
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bank-flow-balance-route
  namespace: bank-flow
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: bank-flow-balance-rate-limiting,bank-flow-correlation-id,bank-flow-request-size-limiting,bank-flow-security-headers,bank-flow-cors
spec:
  parentRefs:
    - name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /balance
      backendRefs:
        - name: bank-flow-balance-api
          kind: Service
          port: 8082
