kong-configs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-flow-transfer-ingress
  namespace: bank-flow
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: bank-flow-transfer-rate-limiting,bank-flow-correlation-id,bank-flow-request-size-limiting,bank-flow-security-headers,bank-flow-cors
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /transfer
            pathType: Prefix
            backend:
              service:
                name: bank-flow-transfer-api
                port:
                  number: 8083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-flow-accounts-ingress
  namespace: bank-flow
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: bank-flow-accounts-rate-limiting,bank-flow-correlation-id,bank-flow-request-size-limiting,bank-flow-security-headers,bank-flow-cors
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: bank-flow-accounts
                port:
                  number: 8084
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-flow-balance-ingress
  namespace: bank-flow
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: bank-flow-balance-rate-limiting,bank-flow-correlation-id,bank-flow-request-size-limiting,bank-flow-security-headers,bank-flow-cors
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /balance
            pathType: Prefix
            backend:
              service:
                name: bank-flow-balance-api
                port:
                  number: 8082
